feat: swagger fixed and added
